--- a/META.yml
+++ b/META.yml
@@ -26,45 +26,47 @@ no_index:
 provides:
   MooseX::Unique:
     file: lib/MooseX/Unique.pm
-    version: 0.002
+    version: 0.003
   MooseX::Unique::Meta::Trait::Attribute:
     file: lib/MooseX/Unique/Meta/Trait/Attribute.pm
-    version: 0.002
+    version: 0.003
   MooseX::Unique::Meta::Trait::Class:
     file: lib/MooseX/Unique/Meta/Trait/Class.pm
-    version: 0.002
+    version: 0.003
   MooseX::Unique::Meta::Trait::Object:
     file: lib/MooseX/Unique/Meta/Trait/Object.pm
-    version: 0.002
+    version: 0.003
   MooseX::Unique::Meta::Trait::Role:
     file: lib/MooseX/Unique/Meta/Trait/Role.pm
-    version: 0.002
+    version: 0.003
   MooseX::Unique::Meta::Trait::Role::ApplicationToClass:
     file: lib/MooseX/Unique/Meta/Trait/Role/ApplicationToClass.pm
-    version: 0.002
+    version: 0.003
   MooseX::Unique::Meta::Trait::Role::ApplicationToRole:
     file: lib/MooseX/Unique/Meta/Trait/Role/ApplicationToRole.pm
-    version: 0.002
+    version: 0.003
   MooseX::Unique::Meta::Trait::Role::Composite:
     file: lib/MooseX/Unique/Meta/Trait/Role/Composite.pm
-    version: 0.002
+    version: 0.003
 requires:
+  List::MoreUtils: 0
   Moose: 1.9900
   Moose::Exporter: 0
   Moose::Role: 0
   Moose::Util: 0
   Moose::Util::MetaRole: 0
   MooseX::InstanceTracking: 0.06
-  perl: 5.006
+  perl: 5.10.0
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=MooseX-Unique
   homepage: http://search.cpan.org/dist/MooseX-Unique/
   license: http://dev.perl.org/licenses/
   repository: git://github.com/riemann42/MooseX-Unique.git
-version: 0.002
+version: 0.003
 x_BuiltWith:
   modules:
     File::Temp: 0.22
+    List::MoreUtils: 0.32
     Module::Build: 0.38
     Moose: 2.0102
     Moose::Exporter: 2.0102
