Import of EALLENIII/MooseX-Unique-0.005 from CPAN.
gitpan-cpan-distribution: MooseX-Unique
gitpan-cpan-version:      0.005
gitpan-cpan-path:         EALLENIII/MooseX-Unique-0.005.tar.gz
gitpan-cpan-author:       EALLENIII
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -29,35 +29,31 @@ no_index:
 provides:
   MooseX::Unique:
     file: lib/MooseX/Unique.pm
-    version: 0.004
+    version: 0.005
   MooseX::Unique::Meta::Trait::Attribute:
     file: lib/MooseX/Unique/Meta/Trait/Attribute.pm
-    version: 0.004
+    version: 0.005
   MooseX::Unique::Meta::Trait::Class:
     file: lib/MooseX/Unique/Meta/Trait/Class.pm
-    version: 0.004
+    version: 0.005
   MooseX::Unique::Meta::Trait::Object:
     file: lib/MooseX/Unique/Meta/Trait/Object.pm
-    version: 0.004
+    version: 0.005
   MooseX::Unique::Meta::Trait::Role:
     file: lib/MooseX/Unique/Meta/Trait/Role.pm
-    version: 0.004
+    version: 0.005
   MooseX::Unique::Meta::Trait::Role::ApplicationToClass:
     file: lib/MooseX/Unique/Meta/Trait/Role/ApplicationToClass.pm
-    version: 0.004
+    version: 0.005
   MooseX::Unique::Meta::Trait::Role::ApplicationToRole:
     file: lib/MooseX/Unique/Meta/Trait/Role/ApplicationToRole.pm
-    version: 0.004
+    version: 0.005
   MooseX::Unique::Meta::Trait::Role::Composite:
     file: lib/MooseX/Unique/Meta/Trait/Role/Composite.pm
-    version: 0.004
+    version: 0.005
 requires:
   List::MoreUtils: 0
   Moose: 1.9900
-  Moose::Exporter: 0
-  Moose::Role: 0
-  Moose::Util: 0
-  Moose::Util::MetaRole: 0
   MooseX::InstanceTracking: 0.06
   perl: 5.10.0
 resources:
@@ -65,17 +61,13 @@ resources:
   homepage: http://search.cpan.org/dist/MooseX-Unique/
   license: http://dev.perl.org/licenses/
   repository: git://github.com/riemann42/MooseX-Unique.git
-version: 0.004
+version: 0.005
 x_BuiltWith:
   modules:
     File::Temp: 0.22
     List::MoreUtils: 0.32
     Module::Build: 0.38
     Moose: 2.0102
-    Moose::Exporter: 2.0102
-    Moose::Role: 2.0102
-    Moose::Util: 2.0102
-    Moose::Util::MetaRole: 2.0102
     Moose::Util::TypeConstraints: 2.0102
     MooseX::InstanceTracking: 0.06
     Scalar::Util: 1.23
@@ -207,6 +199,18 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: AutoPrereqs
+      version: 4.200007
+    -
+      class: Dist::Zilla::Plugin::RemovePrereqs
+      config:
+        Dist::Zilla::Plugin::RemovePrereqs:
+          modules_to_remove:
+            - Moose::Exporter
+            - utf8
+            - Moose::Util::MetaRole
+            - Moose::Util
+            - Moose::Role
+      name: RemovePrereqs
       version: 4.200007
     -
       class: Dist::Zilla::Plugin::Bugtracker
